--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: /jasper2/
 
 # Website info
 title: Akshay Hari
-description: The professional publishing platform
+description: The professional 
 cover: assets/images/blog-cover.jpg
 logo: assets/images/blog-icon.png
 logo_dark: assets/images/favicon.png
